# GDGinNCKU_NLP_2025

./: .gitignore  README.md  pyproject.toml
week_01/: 01_tokenization.ipynb  02_embedding.ipynb  03_subword.ipynb
week_02/: 01_DNN.ipynb  02_RNN.ipynb  03_Seq2Seq.ipynb  04_Transformers.ipynb
week_04/: adaptive_prompt.txt  classic_rag.ipynb  rag.ipynb  retrieval.ipynb
