[project]
name = "gdgnlp2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "torch==2.7.1",
    "torchaudio>=2.7.1",
    "torchvision==0.22.1",
    "transformers>=4.57.1",
]
